tests/snapshots/config_fixtures__bad_toml_syntax.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 1, column 8
  |
1 | [server
  |        ^
unclosed table, expected `]`
